# immobilus

./: .gitignore  .travis.yml  CHANGELOG  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: publish_pypi.yml  run_tests.yml
immobilus/: __init__.py  logic.py  pytest_plugin.py
tests/: conftest.py  test_as_class_methods.py  test_async.py  test_date.py  test_datetime.py  test_decorate_classes.py  test_general.py  test_gmtime.py  test_jump.py  test_localtime.py  test_misc_behaviours.py  test_mktime.py  test_pickle.py  test_pytest_marker.py  test_shift.py  test_strftime.py  test_thread_safety.py  test_tick.py  test_time.py  utils.py
