[project]
name = "immobilus"
version = "2.0.0"
description = "A lightweight and fast time management library for Python tests"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["python-dateutil"]
license = "Apache-2.0"
authors = [
    {name = "Eugene Pokidov", email = "pokidovea@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==0.23.7; python_version >= '3.8'",
    "pytest-cov==6.2.0",
    "pytz",
    "flake8==7.3.0",
    "twine",
]

[project.urls]
Homepage = "https://github.com/pokidovea/immobilus"

[project.entry-points.pytest11]
immobilus = "immobilus.pytest_plugin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
